# bracket

./: .env.cmake  CMakeLists.txt  README.md  build.bat  build.sh  compile.bat
src/: bracket_device.cpp  bracket_device.hpp  bracket_model.cpp  bracket_model.hpp  bracket_pipeline.cpp  bracket_pipeline.hpp  bracket_swap_chain.cpp  bracket_swap_chain.hpp  bracket_window.hpp  bracket_winow.cpp  first_app.cpp  first_app.hpp  main.cpp
src/shaders/: simple_shader.frag  simple_shader.frag.spv
